[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinfra-nspawn-connector"
version = "0.1.0"

# This is the key part - register the connector with pyinfra
[project.entry-points."pyinfra.connectors"]
nspawn = "pyinfra_nspawn_connector:PyinfraNspawnConnector"

[dependency-groups]
dev = [
    "pyinfra>=3.4.1",
    "pyinfra-nspawn-connector",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
pyinfra-nspawn-connector = { workspace = true }
